back to home added to recipes

--- a/recipes/japanese_curry.html
+++ b/recipes/japanese_curry.html
@@ -29,6 +29,8 @@
             <li>Turn the heat off, break curry mix into pieces and add them to the skillet.  Stir until sauce mixes are completely melted.  Simmer approximately for 5 minutes.</li>
             <li>Serve hot over rice or noodles.</li>
         </ol>
-        <p font=8pt>Source: <a href="https://www.sbfoods-worldwide.com/recipes/010.html">S&B Foods.</a></p>
+
+    <p font=8pt><a href="index.html">Back to home.</a></p>
+
     </body>
     </html>
