--- a/recipes/spam_rice.html
+++ b/recipes/spam_rice.html
@@ -21,5 +21,8 @@
         <li>Take spam out of can.  Cut into desired shape, though bite-size is recommended.  Microwave spam on a plate until thoroughly heated.</li>
         <li>Put rice in microwave and follow directions on the packaging.  When done, eat with spam.</li>
     </ol>
+
+    <p font=8pt><a href="index.html">Back to home.</a></p>
+
 </body>
 </html>
