fixed error on homepage link

--- a/recipes/japanese_curry.html
+++ b/recipes/japanese_curry.html
@@ -30,7 +30,7 @@
             <li>Serve hot over rice or noodles.</li>
         </ol>
 
-    <p font=8pt><a href="index.html">Back to home.</a></p>
+    <p font=8pt><a href="../index.html">Back to home.</a></p>
 
     </body>
     </html>
