--- a/recipes/spam_rice.html
+++ b/recipes/spam_rice.html
@@ -22,7 +22,7 @@
         <li>Put rice in microwave and follow directions on the packaging.  When done, eat with spam.</li>
     </ol>
 
-    <p font=8pt><a href="index.html">Back to home.</a></p>
+    <p font=8pt><a href="../index.html">Back to home.</a></p>
 
 </body>
 </html>
