--- a/recipes/tuna_salad.html
+++ b/recipes/tuna_salad.html
@@ -28,6 +28,6 @@
         <li>Line 4 slices of bread with lettuce; top each with 1/4 tuna mixture, add cheese and or condiments as desired, and top with remaining bread.</li>
 
     </ol>
-    <p font=8pt><a href="index.html">Back to home.</a></p>
+    <p font=8pt><a href="../index.html">Back to home.</a></p>
 </body>
 </html>
