--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <li><a href=recipes/spam_rice.html>Spam and Rice</a></li>
     <li><a href=recipes/japanese_curry.html>Japanese Curry</a></li>
     <li><a href=recipes/tuna_salad.html>Tuna Salad Sandwhiches</a></li>
+    <li><a href=recipes/Decimal2Undecinal.html>Decimal to Undecimal converter</a></li>
 </ul>
 </body>
 </html>
