--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <li><a href=recipes/japanese_curry.html>Japanese Curry</a></li>
     <li><a href=recipes/tuna_salad.html>Tuna Salad Sandwhiches</a></li>
     <li><a href=recipes/Decimal2Undecinal.html>Decimal to Undecimal converter</a></li>
+    <li><a href=recipes/Calc.html>Undecimal calculator</a></li>
+
 </ul>
 </body>
 </html>
