--- a/recipes/Calc.html
+++ b/recipes/Calc.html
@@ -23,22 +23,26 @@
             padding: 10px 20px;
             margin: 5px;
         }
+        .symbols {
+            display: grid;
+            grid-template-columns: repeat(5, 1fr);
+            gap: 10px;
+        }
     </style>
 </head>
 <body>
     <div class="calculator">
         <h2>Balanced Undecimal Calculator</h2>
         <input type="text" id="inputField" readonly>
-        <div class="buttons">
-            <button onclick="appendToInput('6')">6</button>
-            <button onclick="appendToInput('L')">L</button>
-            <button onclick="appendToInput('w')">w</button>
+        <div class="symbols">
             <button onclick="appendToInput('d')">d</button>
             <button onclick="appendToInput('q')">q</button>
             <button onclick="appendToInput('o')">o</button>
             <button onclick="appendToInput('p')">p</button>
             <button onclick="appendToInput('b')">b</button>
-            <button onclick="appendToInput('m')">m</button>
+            <button onclick="appendToInput('6')">6</button>
+            <button onclick="appendToInput('L')">L</button>
+            <button></button>
             <button onclick="appendToInput('7')">7</button>
             <button onclick="appendToInput('9')">9</button>
         </div>
@@ -54,6 +58,7 @@
             <input type="text" id="outputField" readonly>
         </div>
     </div>
+
 
     <script>
         const undecimalSymbols = ['6', 'L', 'w', 'd', 'q', 'o', 'p', 'b', 'm', '7', '9'];
