--- a/recipes/Calc.html
+++ b/recipes/Calc.html
@@ -60,86 +60,97 @@
 
     <script>
         const undecimalSymbols = ['6', 'L', 'w', 'd', 'q', 'o', 'p', 'b', 'm', '7', '9'];
-        const undecimalValues = {
-            '6': -5, 'L': -4, 'w': -3, 'd': -2, 'q': -1,
-            'o': 0,
-            'p': 1, 'b': 2, 'm': 3, '7': 4, '9': 5
-        };
+const undecimalValues = {
+    '6': -5, 'L': -4, 'w': -3, 'd': -2, 'q': -1,
+    'o': 0,
+    'p': 1, 'b': 2, 'm': 3, '7': 4, '9': 5
+};
 
-        function appendToInput(symbol) {
-            const inputField = document.getElementById('inputField');
-            inputField.value += symbol;
+function balancedToUnbalanced(undecimalStr) {
+    let unbalancedStr = '';
+    for (let char of undecimalStr) {
+        let value = undecimalValues[char];
+        if (value < 0) {
+            value += 11;
         }
+        unbalancedStr += value.toString();
+    }
+    return unbalancedStr;
+}
 
-        function clearInput() {
-            const inputField = document.getElementById('inputField');
-            inputField.value = '';
-            document.getElementById('outputField').value = '';
+function unbalancedToDecimal(unbalancedStr) {
+    let decimalValue = 0;
+    for (let i = 0; i < unbalancedStr.length; i++) {
+        decimalValue = decimalValue * 11 + parseInt(unbalancedStr[i]);
+    }
+    return decimalValue;
+}
+
+function decimalToUnbalanced(decimalValue) {
+    let unbalancedStr = '';
+    while (decimalValue !== 0) {
+        let remainder = decimalValue % 11;
+        decimalValue = Math.floor(decimalValue / 11);
+        unbalancedStr = remainder.toString() + unbalancedStr;
+    }
+    return unbalancedStr || '0';
+}
+
+function unbalancedToBalanced(unbalancedStr) {
+    let undecimalStr = '';
+    for (let char of unbalancedStr) {
+        let value = parseInt(char);
+        if (value > 5) {
+            value -= 11;
         }
+        undecimalStr += undecimalSymbols[value + 5];
+    }
+    return undecimalStr;
+}
 
-        function undecimalToDecimal(undecimalStr) {
-            let decimalValue = 0;
-            for (let i = 0; i < undecimalStr.length; i++) {
-                decimalValue = decimalValue * 11 + undecimalValues[undecimalStr[i]];
-            }
-            return decimalValue;
-        }
+function calculate() {
+    const inputField = document.getElementById('inputField');
+    const inputStr = inputField.value;
 
-        function decimalToUndecimal(decimalValue) {
-            let undecimalStr = '';
-            while (decimalValue !== 0) {
-                let remainder = decimalValue % 11;
-                decimalValue = Math.floor(decimalValue / 11);
+    let operands, operation;
+    if (inputStr.includes('+')) {
+        operands = inputStr.split('+');
+        operation = '+';
+    } else if (inputStr.includes('×')) {
+        operands = inputStr.split('×');
+        operation = '×';
+    } else if (inputStr.includes('/')) {
+        operands = inputStr.split('/');
+        operation = '/';
+    } else {
+        return;
+    }
 
-                // Adjust for negative remainders
-                if (remainder < 0) {
-                    remainder += 11;
-                    decimalValue -= 1;
-                }
+    const operand1Unbalanced = balancedToUnbalanced(operands[0]);
+    const operand2Unbalanced = balancedToUnbalanced(operands[1]);
 
-                undecimalStr = undecimalSymbols[remainder] + undecimalStr;
-            }
-            return undecimalStr || 'o';
-        }
+    const operand1Decimal = unbalancedToDecimal(operand1Unbalanced);
+    const operand2Decimal = unbalancedToDecimal(operand2Unbalanced);
 
-        function calculate() {
-            const inputField = document.getElementById('inputField');
-            const inputStr = inputField.value;
+    let resultDecimal;
+    switch (operation) {
+        case '+':
+            resultDecimal = operand1Decimal + operand2Decimal;
+            break;
+        case '×':
+            resultDecimal = operand1Decimal * operand2Decimal;
+            break;
+        case '/':
+            resultDecimal = operand1Decimal / operand2Decimal;
+            break;
+    }
 
-            // Split the input string by the operation
-            let operands, operation;
-            if (inputStr.includes('+')) {
-                operands = inputStr.split('+');
-                operation = '+';
-            } else if (inputStr.includes('×')) {
-                operands = inputStr.split('×');
-                operation = '×';
-            } else if (inputStr.includes('/')) {
-                operands = inputStr.split('/');
-                operation = '/';
-            } else {
-                return;
-            }
+    const resultUnbalanced = decimalToUnbalanced(resultDecimal);
+    const resultUndecimal = unbalancedToBalanced(resultUnbalanced);
 
-            const operand1Decimal = undecimalToDecimal(operands[0]);
-            const operand2Decimal = undecimalToDecimal(operands[1]);
-            let resultDecimal;
+    document.getElementById('outputField').value = resultUndecimal;
+}
 
-            switch (operation) {
-                case '+':
-                    resultDecimal = operand1Decimal + operand2Decimal;
-                    break;
-                case '×':
-                    resultDecimal = operand1Decimal * operand2Decimal;
-                    break;
-                case '/':
-                    resultDecimal = operand1Decimal / operand2Decimal;
-                    break;
-            }
-
-            const resultUndecimal = decimalToUndecimal(resultDecimal);
-            document.getElementById('outputField').value = resultUndecimal;
-        }
     </script>
 </body>
 </html>
