--- a/recipes/Calc.html
+++ b/recipes/Calc.html
@@ -54,104 +54,111 @@
     </div>
 
     <script>
+        // Define the symbols and their corresponding values
         const undecimalSymbols = ['6', 'L', 'w', 'd', 'q', 'o', 'p', 'b', 'm', '7', '9'];
-const undecimalValues = {
-    '6': -5, 'L': -4, 'w': -3, 'd': -2, 'q': -1,
-    'o': 0,
-    'p': 1, 'b': 2, 'm': 3, '7': 4, '9': 5
-};
+        const undecimalValues = {
+            '6': -5, 'L': -4, 'w': -3, 'd': -2, 'q': -1,
+            'o': 0,
+            'p': 1, 'b': 2, 'm': 3, '7': 4, '9': 5
+        };
 
-function balancedToUnbalanced(undecimalStr) {
-    let unbalancedStr = '';
-    for (let char of undecimalStr) {
-        let value = undecimalValues[char];
-        if (value < 0) {
-            value += 11;
+        // Convert from balanced undecimal to unbalanced base 11
+        function balancedToUnbalanced(undecimalStr) {
+            let unbalancedStr = '';
+            for (let char of undecimalStr) {
+                let value = undecimalValues[char];
+                if (value < 0) {
+                    value += 11;
+                }
+                unbalancedStr += value.toString();
+            }
+            return unbalancedStr;
         }
-        unbalancedStr += value.toString();
-    }
-    return unbalancedStr;
-}
 
-function unbalancedToDecimal(unbalancedStr) {
-    let decimalValue = 0;
-    for (let i = 0; i < unbalancedStr.length; i++) {
-        decimalValue = decimalValue * 11 + parseInt(unbalancedStr[i]);
-    }
-    return decimalValue;
-}
-
-function decimalToUnbalanced(decimalValue) {
-    let unbalancedStr = '';
-    while (decimalValue !== 0) {
-        let remainder = decimalValue % 11;
-        decimalValue = Math.floor(decimalValue / 11);
-        unbalancedStr = remainder.toString() + unbalancedStr;
-    }
-    return unbalancedStr || '0';
-}
-
-function unbalancedToBalanced(unbalancedStr) {
-    let undecimalStr = '';
-    for (let char of unbalancedStr) {
-        let value = parseInt(char);
-        if (value > 5) {
-            value -= 11;
+        // Convert from unbalanced base 11 to decimal
+        function unbalancedToDecimal(unbalancedStr) {
+            let decimalValue = 0;
+            for (let i = 0; i < unbalancedStr.length; i++) {
+                decimalValue = decimalValue * 11 + parseInt(unbalancedStr[i]);
+            }
+            return decimalValue;
         }
-        undecimalStr += undecimalSymbols[value + 5];
-    }
-    return undecimalStr;
-}
 
-function calculate() {
-    const inputField = document.getElementById('inputField');
-    const inputStr = inputField.value;
+        // Convert from decimal to unbalanced base 11
+        function decimalToUnbalanced(decimalValue) {
+            let unbalancedStr = '';
+            while (decimalValue !== 0) {
+                let remainder = decimalValue % 11;
+                decimalValue = Math.floor(decimalValue / 11);
+                unbalancedStr = remainder.toString() + unbalancedStr;
+            }
+            return unbalancedStr || '0';
+        }
 
-    let operands, operation;
-    if (inputStr.includes('+')) {
-        operands = inputStr.split('+');
-        operation = '+';
-    } else if (inputStr.includes('×')) {
-        operands = inputStr.split('×');
-        operation = '×';
-    } else if (inputStr.includes('/')) {
-        operands = inputStr.split('/');
-        operation = '/';
-    } else {
-        return;
-    }
+        // Convert from unbalanced base 11 to balanced undecimal
+        function unbalancedToBalanced(unbalancedStr) {
+            let undecimalStr = '';
+            for (let char of unbalancedStr) {
+                let value = parseInt(char);
+                if (value > 5) {
+                    value -= 11;
+                }
+                undecimalStr += undecimalSymbols[value + 5];
+            }
+            return undecimalStr;
+        }
 
-    const operand1Unbalanced = balancedToUnbalanced(operands[0]);
-    const operand2Unbalanced = balancedToUnbalanced(operands[1]);
+        // Perform the calculation based on the input
+        function calculate() {
+            const inputField = document.getElementById('inputField');
+            const inputStr = inputField.value;
 
-    const operand1Decimal = unbalancedToDecimal(operand1Unbalanced);
-    const operand2Decimal = unbalancedToDecimal(operand2Unbalanced);
+            let operands, operation;
+            if (inputStr.includes('+')) {
+                operands = inputStr.split('+');
+                operation = '+';
+            } else if (inputStr.includes('×')) {
+                operands = inputStr.split('×');
+                operation = '×';
+            } else if (inputStr.includes('/')) {
+                operands = inputStr.split('/');
+                operation = '/';
+            } else {
+                return;
+            }
 
-    let resultDecimal;
-    switch (operation) {
-        case '+':
-            resultDecimal = operand1Decimal + operand2Decimal;
-            break;
-        case '×':
-            resultDecimal = operand1Decimal * operand2Decimal;
-            break;
-        case '/':
-            resultDecimal = operand1Decimal / operand2Decimal;
-            break;
-    }
+            const operand1Unbalanced = balancedToUnbalanced(operands[0]);
+            const operand2Unbalanced = balancedToUnbalanced(operands[1]);
 
-    const resultUnbalanced = decimalToUnbalanced(resultDecimal);
-    const resultUndecimal = unbalancedToBalanced(resultUnbalanced);
+            const operand1Decimal = unbalancedToDecimal(operand1Unbalanced);
+            const operand2Decimal = unbalancedToDecimal(operand2Unbalanced);
 
-    document.getElementById('outputField').value = resultUndecimal;
-}
+            let resultDecimal;
+            switch (operation) {
+                case '+':
+                    resultDecimal = operand1Decimal + operand2Decimal;
+                    break;
+                case '×':
+                    resultDecimal = operand1Decimal * operand2Decimal;
+                    break;
+                case '/':
+                    resultDecimal = operand1Decimal / operand2Decimal;
+                    break;
+            }
 
+            const resultUnbalanced = decimalToUnbalanced(resultDecimal);
+            const resultUndecimal = unbalancedToBalanced(resultUnbalanced);
 
+            document.getElementById('outputField').value = resultUndecimal;
+        }
+
+        // Append a symbol to the input field
         function appendToInput(symbol) {
             const inputField = document.getElementById('inputField');
             inputField.value += symbol;
         }
 
+        // Clear the input and output fields
         function clearInput() {
             const inputField = document.getElementById('inputField');
             inputField.value = '';
