--- a/recipes/Calc.html
+++ b/recipes/Calc.html
@@ -23,6 +23,11 @@
         input {
             width: 200px;
         }
+        footer {
+        margin-top: 20px;
+        font-size: 0.8em;
+        color: #888;
+        }
     </style>
 </head>
 <body>
@@ -51,7 +56,10 @@
         <button onclick="appendToInput('×')">×</button>
         <button onclick="appendToInput('+')">+</button>
         <button onclick="appendToInput('/')">/</button>
-    </div>
+    <footer>
+        Version: 1.0
+    </footer>
+</div>
 
     <script>
         // Define the symbols and their corresponding values
